--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uğur Çakı | Portfolyo</title>
     <meta name="description" content="Sanatçı Uğur Çakı'nın heykel ve seramik çalışmalarından oluşan dijital portfolyosu.">
-    <!-- Montserrat Font Integration -->
+    <!-- Montserrat Font Integration: 400, 500 (Medium), 700 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -18,8 +18,10 @@
               sans: ['Montserrat', 'sans-serif'],
             },
             fontWeight: {
-              light: '300',
-              semibold: '600',
+              normal: '400',
+              medium: '500',
+              semibold: '700',
+              bold: '700',
             }
           }
         }
@@ -38,6 +40,7 @@
         }
         body {
             font-family: 'Montserrat', sans-serif;
+            font-weight: 400; /* Default Regular */
             scroll-behavior: smooth;
             background-color: var(--off-white);
             color: var(--dark-navy);
@@ -82,9 +85,7 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.575.0",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "framer-motion": "https://esm.sh/framer-motion@^12.34.3",
-    "gsap": "https://esm.sh/gsap@3.12.5",
-    "gsap/ScrollTrigger": "https://esm.sh/gsap@3.12.5/ScrollTrigger"
+    "framer-motion": "https://esm.sh/framer-motion@^12.34.3"
   }
 }
 </script>
